# hpp-bride

./: .cproject  .project  CMakeLists.txt  README.md  TODO  package.xml
cfg/: hpp.cfg
common/src/: hpp_common.cpp
model/: hpp.ros_package  hpp.ros_package_diagram
ros/src/: hpp_ros.cpp
script/: config_publisher.py  initialize.py
