<?xml version="1.0"?>
<package>
  <name>hpp_node</name>
  <description>The hpp_node package</description>
  <version>0.1.0</version>
  <maintainer email="florent@laas.fr">Florent Lamiraux</maintainer>
  <author email="florent@laas.fr">Florent Lamiraux</author>
  <license>lgpl  v2</license>
  <url></url>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- bride default dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>actionlib</run_depend>

  <!-- user dependencies -->
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>std_srvs</build_depend>
  <run_depend>std_srvs</run_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

  <!-- protected region additional manifest statements on begin -->
  <!-- protected region additional manifest statements end -->

</package>
